@@ -1,3 +1,15 @@
+2010-04-22  Eric Seidel  <eric@webkit.org>
+
+        Unreviewed.  Fixing new-run-webkit-tests on the bots.
+
+        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:
+         - Fixing _compat_shim_option to take variable keyword args.
+         - Turns out that nargs + callback is ignored unless type is specified.
+           So I added the type so that the option was properly consumed.
+           This was why new-run-webkit-tests couldn't find any tests, it
+           was looking for them under "20" because that was the argument
+           which should have been consumed by --exit-after-n-failures.
+
 2010-04-22  Tony Chang  <tony@chromium.org>
 
         Not reviewed, build fix for chromium Windows.
